2006-07-13  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.cc: add guard for dispatch loop stop flag.

	* EvManager.h: idem

	* NetTransport.cc: socket manager already provide connection
	loop; socket in NetTransport should be shutdown to break down
	through infinite read.

	* NetTransport.h: prepare NetTransport to current sockmgr.

	* _EventHandler.cc: add guard for Init, where EvManager and Names
	started.

	* libstem (Repository): library version 4.1.0.

2006-06-28  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Makefile: remove -ISTLPORT, may be build without one; but
	boost is required in this case.

	* Cron.cc: check LONG_LONG in libstdc++ too

	* Event.h: define __type_traits (from STLport) in case of
	build with libstdc++.

	* EventHandler.h: use ext/functional and namespace __gnu_cxx
	for some functors when compile with libstdc++.

	* SessionMgr.h: ditto

2006-05-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EventHandler.h: explicitly add stdexcept header.

2006-02-27  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.cc, NetTransport.cc, _EventHandler.cc: rename nsaddr to
	ns_addr to fix conflict with define in resolv.h for backword
	compatibility.

	* Event.h: ditto.

	* libstem (Repository): library version 4.0.1.

2005-06-28  Petr Ovtchenkov  <Petr.Ovchenkov@Kaspersky.COM>

	* EvPack.h: add missed short and unsigned short to transport.

2005-06-14  Petr Ovtchenkov  <Petr.Ovchenkov@Kaspersky.COM>

	* EventHandler.h: modern compilers support member templates,
	so member template methods Send and Forward added for
	parametric Event.

2005-03-30  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* libstem (Repository): fix problems with modern compiler
	[gcc 3.4.2, more strict and near Standard]; reincarnation
	in CVS repository under version 4.0.

2003-11-06  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libEDS: library renamed to 'stem' == lower of 'StEM'

	* libstem: compilation with present libxmt and libsockios
